--- a/Game1/Game1.vcxproj
+++ b/Game1/Game1.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Tower.h" />
     <ClInclude Include="Unit.h" />
@@ -30,6 +31,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Tower.cpp" />
     <ClCompile Include="Unit.cpp" />
   </ItemGroup>
